[Fix] Get rid of extra padding-left on portfolio page

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -10,7 +10,7 @@ body {
 hr {
   border-top: 1px solid @quantum;
 }
-.portfolio {
+.portfolio ul {
   padding: 0;
 }
 .portfolio-item {
